src/tests/zustand-pick/syntax-errors/direct-pick-access2.js
const name = useGlobalStore.pick("order")?.user.name;
